--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: 3.x
+          python-version: 3.12
       - run: pip install mkdocs-material==5.5.12
       - run: pip install mkdocs-exclude
       - run: pip install mkdocs-roamlinks-plugin
