--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,8 +11,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: 3.7
-      - run: pip install mkdocs-material==5.5.12
+          python-version: 3.x
+      - run: pip install mkdocs-material=="9.*"
       - run: pip install mkdocs-exclude
       - run: pip install mkdocs-roamlinks-plugin
       - run: mkdocs gh-deploy --force
