--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,4 +15,5 @@ jobs:
       - run: pip install mkdocs-material=="9.*"
       - run: pip install mkdocs-exclude
       - run: pip install mkdocs-roamlinks-plugin
+      - run: pip install mkdocs-backlinks
       - run: mkdocs gh-deploy --force
