--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ theme:
   name: material
   #  favicon: attachment/portrait.png
   language: zh # 中文，解决中文搜索问题
+  custom_dir: 'custom_theme/'
   features:
     - navigation.path
     - navigation.tabs
