--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -56,8 +56,8 @@ plugins:
   - search
   - roamlinks 
     #- autolinks 
-  # - mkdocs-backlinks:
-  #   ignored_pages: ['Tags','Home']
+  - mkdocs-backlinks:
+    ignored_pages: ['Tags','Home']
   - exclude:
       glob:
         - "*.tmp"
