--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -2,7 +2,7 @@
   "accentColor": "#74d0fb",
   "theme": "obsidian",
   "baseFontSize": 14,
-  "cssTheme": "Minimal",
+  "cssTheme": "Blue Topaz",
   "enabledCssSnippets": [
     "test",
     "CustomMermaid",
